--- a/images/contains/style-personal-portfolio.css
+++ b/images/contains/style-personal-portfolio.css
@@ -525,7 +525,7 @@ Buttons
   letter-spacing: 0rem;
   font-size: .80rem;
   font-family: "Montserrat", sans-serif;
-  /* padding: 13px 25px 13px !important; */
+  padding: 13px 25px 13px !important;
   text-transform: uppercase;
   vertical-align: middle; }
   .btn i {
@@ -1197,10 +1197,10 @@ Projects style
 
 /********typed text cursor style*********/
 .typed {
-  font-weight: 400;
+  font-weight: 300;
   display: block;
   margin-bottom: 30px;
-  font-size: 1.0em;
+  font-size: 2.5em;
   color: #fff; }
 
 .typed:after {
@@ -1373,15 +1373,13 @@ schedule
     top: 10px;
     content: ""; }
   .event-detail:after {
-    content: ">";
+    content: "\f105";
     font-family: "FontAwesome";
     position: absolute;
-    left: -3px;
-    top: 4px;
+    left: -2px;
+    top: 3px;
     color: #34495E;
-    font-size: 28px;
-    border-radius: 160px; 
-  }
+    font-size: 28px; }
   .event-detail h3 {
     margin-bottom: 20px; }
     .event-detail h3 a {
